--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 micronaut:
+  server:
+    port: 8085
   application:
     name: coroutinesBlog
 netty:
   default:
     allocator:
       max-order: 3
+mongodb:
+  uri: mongodb://root:password@localhost:27017/reactiveblog?authSource=admin
